--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Startup Name Generator</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+    <h1>🚀 AI Startup Name Generator</h1>
+    <p>Click below to get your next million-dollar idea 💡</p>
+    <button id="generate-btn">Generate Name</button>
+    <div id="name-box"></div>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
 
